# pr-demo-gui

./: .gitignore  Makefile.am  README  audiopipeline.cpp  audiopipeline.h  colormap.cpp  colormap.h  configure.ac  dyplocontext.cpp  dyplocontext.h  dyplomandelbrotthread.cpp  dyplomandelbrotthread.h  dyplonodeinfo.cpp  dyplonodeinfo.h  dyploresources.h  dyplorouter.cpp  dyplorouter.h  dyplovideothread.cpp  dyplovideothread.h  externalresources.cpp  externalresources.h  filterprogrammer.cpp  filterprogrammer.h  floorplanframe.ui  fourierfilter.cpp  fourierfilter.h  fpgamandelbrotwidget.cpp  fpgamandelbrotwidget.h  fractaldockwidget.cpp  fractaldockwidget.h  fractaldockwidget.ui  fractalframe.ui  frameratecounter.cpp  frameratecounter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mandelbrotpipeline.cpp  mandelbrotpipeline.h  (+29 more)
cpu/: cpuinfo.cpp  cpuinfo.h
